--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,5 +1,4 @@
 .navbar {
-    background-color: #333;
     padding: 1rem 0;
     position: sticky;
     top: 0;
@@ -16,7 +15,7 @@
   }
   
   .navbar-logo {
-    color: white;
+    color: black;
     font-size: 1.5rem;
     text-decoration: none;
     font-weight: bold;
@@ -34,7 +33,7 @@
   }
   
   .navbar-link {
-    color: white;
+    color: black;
     text-decoration: none;
     font-size: 1rem;
     transition: color 0.3s ease;
