--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -17,12 +17,13 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
+    margin: 2rem 0.5rem;
 }
 
 .button-primary:hover {
     background: var(--primary-theme-color-hover);
     color: var(--primary-white-color);
+    text-decoration: none;
 }
 
 .button-primary-disabled {
@@ -47,9 +48,10 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
+    margin: 2rem 0.5rem;
 }
 
 .button-secondary:hover {
   background: var(--primary-dim-color);
+  text-decoration: none;
 }
