--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -15,6 +15,7 @@
   
     --primary-white-color: #fdfbff;
     --primary-dim-color: #efedf4;
+    --primary-shadow-color: #393d4a;
     --primary-black-color: #121318;
     --primary-error-color: #FF5449;
   }
