--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,5 +1,8 @@
+@import "../styles/style.css";
+
 .navbar {
-    padding: 1rem 0;
+    margin: 0;
+    padding: 0;
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -11,14 +14,24 @@
     align-items: center;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 2rem;
+    padding: 0 1rem;
+    background-color: var(--primary-white-color);
+    width: 100%;
+    position: relative;
   }
   
   .navbar-logo {
-    color: black;
+    color: var(--primary-black-color);
     font-size: 1.5rem;
     text-decoration: none;
     font-weight: bold;
+    display: flex;
+    align-items:center;
+  }
+
+  .navbar-logo:hover {
+    color: var(--primary-shadow-color);
+    text-decoration: none;
   }
   
   .navbar-menu {
@@ -33,14 +46,15 @@
   }
   
   .navbar-link {
-    color: black;
-    text-decoration: none;
-    font-size: 1rem;
+    color: var(--primary-black-color);
+    font-size: 1.1rem;
+    font-weight: 600;
     transition: color 0.3s ease;
   }
   
   .navbar-link:hover {
-    color: #ddd;
+    color: var(--primary-shadow-color);
+    text-decoration: none;
   }
   
   @media (max-width: 768px) {
