--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,9 +1,11 @@
-html,
-body {
-  height: 100%;
+html {
+  margin: 0;
+  /* height: 100%; */
 }
+
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: var(--primary-white-color);
@@ -11,6 +13,10 @@ body {
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+p {
+  margin: 0.5rem;
 }
 
 a {
