--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,8 +1,8 @@
-/* font-weight */
 .heading-title {
     font-size: 3rem;
     font-weight: bold;
     margin: 0.5rem;
+    margin-bottom: 2.5rem;
 }
   
 .heading-subtitle {
@@ -13,12 +13,19 @@
   
 .heading-subtitle-bold {
     font-size: 2rem;
-    font-weight: 600;
+    font-weight: bold;
     margin: 0.5rem;
+    margin-bottom: 1rem;
 }
   
 .heading-subtitle-semi-bold {
     font-size: 2rem;
     font-weight: 500;
+    margin: 0.5rem;
+}
+
+.heading-small {
+    font-size: 1rem;
+    font-weight: 600;
     margin: 0.5rem;
 }
