--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,75 +1,23 @@
-.contact {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  .contact h1 {
-    color: #333;
-    text-align: center;
-  }
-  
-  .contact-intro {
-    text-align: center;
-    margin-bottom: 30px;
-  }
-  
-  .contact-info {
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 8px;
-    margin-bottom: 30px;
-  }
-  
-  .contact-info h2 {
-    color: #444;
-    border-bottom: 2px solid #eee;
-    padding-bottom: 10px;
-  }
-  
-  .contact-form {
-    background-color: #f0f0f0;
-    padding: 20px;
-    border-radius: 8px;
-  }
-  
-  .contact-form h2 {
-    color: #444;
-    border-bottom: 2px solid #ddd;
-    padding-bottom: 10px;
-  }
-  
-  .form-group {
-    margin-bottom: 20px;
-  }
-  
-  .form-group label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  .form-group input,
-  .form-group textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-  }
-  
-  .form-group textarea {
-    height: 150px;
-  }
-  
-  .submit-button {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 4px;
-  }
+.contact-form {
+  background-color: var(--primary-dim-color);
+  border-radius: 8px;
+  color: var(--primary-black-color);
+  padding: 2rem 2rem;
+  margin-bottom: 4rem;
+}
+
+.social-links {
+  margin: 0.5rem;
+  margin-top: 1.5rem;
+}
+
+.social-links a {
+  margin-right: 1rem;
+  font-size: 1.5rem;
+  color: var(--primary-white-color);
+  transition: color 0.2s ease;
+}
+
+.social-links a:hover {
+  color: var(--secondary-theme-color);
+}
