--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -4,16 +4,23 @@
   
 .form-group label {
     display: block;
-    margin-bottom: 5px;
+    margin: 0.5rem;
+    margin-bottom: 0.1rem;
 }
 
-.form-group input {
-    /* styles */
-}
-
+.form-group input,
 .form-group textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ddd;
+    width: 95%;
+    padding: 1.1rem;
+    border: 1px solid var(--secondary-theme-color-dark);
     border-radius: 4px;
+    margin: 0.5rem;
+    resize: vertical;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: var(--primary-white-color);
+    font-size: 1.25rem;
+    line-height: 1.6;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
