--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,61 +1,91 @@
 .navbar {
-    padding: 1rem 0;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-  }
-  
-  .navbar-container {
+  padding: 1rem 0;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background: white;
+}
+
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+
+.navbar-logo {
+  color: black;
+  font-size: 1.5rem;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.bar {
+  width: 25px;
+  height: 3px;
+  background-color: black;
+  margin: 4px 0;
+  transition: 0.4s;
+}
+
+.navbar-menu {
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-item {
+  margin-left: 1.5rem;
+}
+
+.navbar-link {
+  color: black;
+  text-decoration: none;
+  font-size: 1rem;
+  transition: color 0.3s ease;
+}
+
+.navbar-link:hover {
+  color: #ddd;
+}
+
+/* Responsive styles */
+@media (max-width: 768px) {
+  .hamburger {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 2rem;
   }
-  
-  .navbar-logo {
-    color: black;
-    font-size: 1.5rem;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  
+
   .navbar-menu {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    background-color: rgb(255, 255, 255);
+    border-width: 2px;
+    border-color: black;
+    padding: .5rem 0;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+    border-bottom: 5px solid black;
+}
+
+
+  .navbar-menu.active {
     display: flex;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
   }
-  
+
   .navbar-item {
-    margin-left: 1.5rem;
+    margin: 0.5rem 0;
+    text-align: center;
   }
-  
-  .navbar-link {
-    color: black;
-    text-decoration: none;
-    font-size: 1rem;
-    transition: color 0.3s ease;
-  }
-  
-  .navbar-link:hover {
-    color: #ddd;
-  }
-  
-  @media (max-width: 768px) {
-    .navbar-container {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  
-    .navbar-menu {
-      flex-direction: column;
-      width: 100%;
-      margin-top: 1rem;
-    }
-  
-    .navbar-item {
-      margin: 0.5rem 0;
-    }
-  }
+}
