--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,82 +1,44 @@
-.projects {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-   
-  .projects h1 {
-    color: #333;
-    text-align: center;
-  }
-  
-  .projects-intro {
-    text-align: center;
-    margin-bottom: 30px;
-  }
-  
-  .project-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
-    justify-content: center;
-  }
-  
-  .project-item {
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    text-align: center;
-  }
-  
-  .project-image {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-    margin-bottom: 15px;
-  }
-  
-  
-  .project-item h3 {
-    margin-top: 0;
-  }
-  
-  .project-status {
-    display: inline-block;
-    padding: 5px 10px;
-    border-radius: 20px;
-    font-size: 0.8em;
-    font-weight: bold;
-  }
-  
-  .project-status.ongoing {
-    background-color: #ffd700;
-    color: #333;
-  }
-  
-  .project-status.completed {
-    background-color: #4CAF50;
-    color: white;
-  }
-  
-  .join-project {
-    background-color: #f0f0f0;
-    padding: 20px;
-    border-radius: 8px;
-    margin-top: 30px;
-    text-align: center;
-  }
-  
-  .propose-button {
-    background-color: #008CBA;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 4px;
-  }
+.projects-intro {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.project-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  justify-content: center;
+}
+
+.project-item {
+  background-color: var(--primary-dim-color);
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 2px 5px var(--primary-shadow-color);
+  text-align: center;
+}
+
+.project-image {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 15px;
+}
+
+.project-status {
+  display: inline-block;
+  padding: 5px 10px;
+  border-radius: 20px;
+  font-size: 0.8em;
+  font-weight: bold;
+}
+
+.project-status.ongoing {
+  background-color: var(--tertiary-theme-color);
+  color: var(--primary-black-color);
+}
+
+.project-status.completed {
+  background-color: var(--primary-theme-color);
+  color: var(--primary-white-color);
+}
