--- a/src/styles/Sponsors.css
+++ b/src/styles/Sponsors.css
@@ -1,66 +1,32 @@
-.sponsors {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-   
-  .sponsors h1 {
-    color: #333;
-    text-align: center;
-  }
-  
-  .sponsor-intro {
-    text-align: center;
-    margin-bottom: 30px;
-  }
-  
-  .sponsor-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-    justify-content: center;
-  }
-  
-  .sponsor-item {
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    transition: transform 0.2s ease-in-out;
-  }
-  
-  .sponsor-item:hover {
-    transform: scale(1.05);
-  }
-  
-  .sponsor-logo {
-    max-width: 120px;
-    height: auto;
-    margin-bottom: 15px;
-    border-radius: 5px;
-  }
-  
-  .become-sponsor {
-    background-color: #f0f0f0;
-    padding: 20px;
-    border-radius: 8px;
-    margin-top: 30px;
-    text-align: center;
-  }
-  
-  .contact-button {
-    background-color: #008CBA;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 4px;
-    transition: background-color 0.2s ease-in-out;
-  }
-  
-  .contact-button:hover {
-    background-color: #005f8a;
-  }
-  
+.sponsor-intro {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.sponsor-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  justify-content: center;
+}
+
+.sponsor-item {
+  background-color: var(--primary-dim-color);
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 2px 5px var(--primary-dim-color);
+  text-align: center;
+  transition: transform 0.2s ease-in-out;
+}
+
+.sponsor-item:hover {
+  text-decoration: none;
+  transform: scale(1.05);
+}
+
+.sponsor-logo {
+  max-width: 120px;
+  height: auto;
+  margin-bottom: 15px;
+  border-radius: 5px;
+}
