--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -49,3 +49,11 @@
     border-radius: 8px;
     margin-bottom: 4rem;
 }
+
+.layout-box-white {
+    background-color: var(--primary-dim-color);
+    color: var(--primary-black-color);
+    padding: 2rem 2rem;
+    border-radius: 8px;
+    margin-bottom: 4rem;
+}
